force-app/main/default/objects/Parametros_WS_UNOe__c/Parametros_WS_UNOe__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Parámetros WS UNOe</label>
</CustomObject>