force-app/main/default/objects/Parametros_WS_UNOe__c/fields/Clave__c.field-meta.xml
<CustomField>
    <fullName>Clave__c</fullName>
    <label>Clave</label>
    <length>20</length>
    <type>Text</type>
</CustomField>