force-app/main/default/objects/Parametros_WS_UNOe__c/fields/NombreConexion__c.field-meta.xml
<CustomField>
    <fullName>NombreConexion__c</fullName>
    <label>NombreConexion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>