force-app/main/default/objects/Parametros_WS_UNOe__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <length>20</length>
    <type>Text</type>
</CustomField>